test/visibility/except/emptyExcept.good
emptyExcept.chpl:8: syntax error: near ';'
